<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Plezix Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <item name="mozac_browser_toolbar_title_view" type="id"/>
    <item name="mozac_browser_toolbar_url_view" type="id"/>
</resources>
