<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Plezix Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <!-- Content description (not visible, for screen readers etc.): Description for the "tabs" button in the browser toolbar. -->
    <string name="mozac_feature_tabs_toolbar_tabs_button">Tabs</string>
</resources>
