<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Plezix Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newTab"
        android:icon="@drawable/mozac_ic_tab_new"
        android:title="@string/menu_action_add_tab"
        app:showAsAction="ifRoom" />
</menu>