...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/mozac_browser_toolbar_edit_icon"
        mozac:actionContainerItemSize="56dp"
        tools:layout_width="56dp" />

    <mozilla.components.ui.autocomplete.InlineAutocompleteEditText
        android:id="@+id/mozac_browser_toolbar_edit_url_view"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="40dp"
        android:width="100dp"
        android:height="100dp"
        android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
...
