...
            android:fadingEdge="horizontal"
            android:textColor="?attr/textPrimary"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/displayName"
            android:layout_alignStart="@id/displayName"
            android:textColor="?attr/textSecondary"
            android:maxLines="4"
...
